<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/containerSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:gravity="center_vertical"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/searchCityBar"
                android:layout_width="303dp"
                android:layout_height="51dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/bg_box"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="@string/buscar_ciudad"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="8dp"
                android:layout_weight="2"
                android:textColor="@color/font"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/searchAction"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_button"
                android:contentDescription="@string/buscar_ciudad"
                android:src="@drawable/ic_my_location"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchCityBar"
                app:layout_constraintTop_toTopOf="@+id/searchCityBar" />

        </LinearLayout>

        <TextView
            android:id="@+id/infoBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/info_busqueda"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/font"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerSearch" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_regular"
            android:text="Fecha"
            android:textColor="@color/font"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoBusqueda" />

        <TextView
            android:id="@+id/cityResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/bungee_regular"
            android:gravity="center"
            android:text="Ciudad, Pais"
            android:textAlignment="center"
            android:textColor="@color/font"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fecha" />

        <LinearLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityResult">

            <LinearLayout
                android:id="@+id/tempResultContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tempWeather"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:fontFamily="@font/bungee_regular"
                    android:text="28°C"
                    android:textAlignment="center"
                    android:textColor="@color/font"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/descriptionWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:text="Descripcion"
                    android:textAlignment="center"
                    android:textColor="@color/font"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iconWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/icon_del_clima"
                android:src="@drawable/sun" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/moreContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/dataContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/mas_informacion"
                android:textColor="@color/font"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_box2">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/wind"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/description_viento" />

                <TextView
                    android:id="@+id/viento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="6dp"
                    android:text="@string/vientos"
                    android:textColor="@color/font"
                    android:textSize="14sp"
                    android:fontFamily="@font/raleway_medium"/>

                <TextView
                    android:id="@+id/vientoVelocidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2.57"
                    android:fontFamily="@font/bungee_regular"
                    android:textColor="@color/font"
                    android:textAlignment="viewEnd"
                    android:layout_marginEnd="18dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_box2"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/humedadIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/droplet"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@string/description_humedad" />

                <TextView
                    android:id="@+id/humedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:text="@string/humedad"
                    android:textColor="@color/font"
                    android:textSize="14sp"
                    android:fontFamily="@font/raleway_medium"/>

                <TextView
                    android:id="@+id/humedadValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2.57"
                    android:textAlignment="viewEnd"
                    android:layout_marginEnd="18dp"
                    android:fontFamily="@font/bungee_regular"
                    android:textColor="@color/font"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_box2">

                <ImageView
                    android:id="@+id/sensacionIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:src="@drawable/thermometer"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/description_termica"/>

                <TextView
                    android:id="@+id/sensacionTermica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:text="@string/termica"
                    android:textColor="@color/font"
                    android:textSize="14sp"
                    android:fontFamily="@font/raleway_medium"/>

                <TextView
                    android:id="@+id/termicaValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:layout_weight="1"
                    android:text="31"
                    android:fontFamily="@font/bungee_regular"
                    android:textSize="14sp"
                    android:textColor="@color/font"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/clima_ahora"
            android:textAllCaps="false"
            android:textColor="@color/font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>